--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -4,6 +4,10 @@
         android:label="flutter_project"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
+
+       <meta-data android:name="com.google.android.geo.API_KEY"
+           android:value="AIzaSyAtr08LcfQJDSSMupI2My8s6XBnef_IGok"/>
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
