--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,9 @@ dependencies:
     sdk: flutter
   dio: ^4.0.6
   shared_preferences: ^2.0.15
+  google_maps_flutter: ^2.1.12
+  flutter_polyline_points: ^1.0.0
+  location: ^4.4.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
