--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,11 @@ dependencies:
   google_maps_flutter: ^2.1.12
   flutter_polyline_points: ^1.0.0
   location: ^4.4.0
+  camera:
+  path_provider: ^2.0.1
+  open_file: ^3.1.0
+  syncfusion_flutter_pdf: ^19.1.55-beta
+  image_picker: ^0.8.5
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
