--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   open_file: ^3.1.0
   syncfusion_flutter_pdf: ^19.1.55-beta
   image_picker: ^0.8.5
+  flushbar: ^1.10.4
+  pdf: ^2.1.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
