--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   flutter:
     sdk: flutter
   dio: ^4.0.6
+  flutter_bloc:  ^8.1.1
   shared_preferences: ^2.0.15
   google_maps_flutter: ^2.1.12
   flutter_polyline_points: ^1.0.0
