--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,10 +38,12 @@ dependencies:
   camera:
   path_provider: ^2.0.1
   open_file: ^3.1.0
-  syncfusion_flutter_pdf: ^19.1.55-beta
+  syncfusion_flutter_pdf: ^20.2.48
   image_picker: ^0.8.5
   flushbar: ^1.10.4
-  pdf: ^2.1.0
+  pdf: ^3.8.3
+  geolocator: ^8.0.1
+  flutter_google_places: ^0.3.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
