--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,7 +49,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   firebase_core: ^1.12.0
-#  firebase_messaging: ^11.2.7
+  firebase_messaging: ^11.2.7
 
 dev_dependencies:
   flutter_test:
