--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   flutter_bloc: ^8.1.1
   shared_preferences: ^2.0.15
   google_maps_flutter: ^2.1.12
+  google_maps_flutter_web: ^0.3.2+2
   flutter_polyline_points: ^1.0.0
   location: ^4.4.0
   camera:
@@ -49,7 +50,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   firebase_core: ^1.12.0
-  firebase_messaging: ^11.2.7
+#  firebase_messaging: ^11.2.7
 
 dev_dependencies:
   flutter_test:
